# spdlog_vendor

./: CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  QUALITY_DECLARATION.md  Quality_Declaration.md  README.md  SPDLOG_QUALITY_DECLARATION.md  package.xml  read-cmake.cmake
